--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="title_login">Log-in</string>
     <string name="text_login_button">Log-in</string>
     <string name="return_to_signup_query">Return to Sign-up</string>
+    <string name="logout_navigation_button"><![CDATA[<- Logout]]></string>
+    <string name="add_new_navigation_button">Add new</string>
+    <string name="back_navigation_button"><![CDATA[<- Back]]></string>
+    <string name="title_add_note">Add note</string>
+    <string name="title_all_notes">All notes</string>
+    <string name="hint_title">Title</string>
+    <string name="hint_message">Message</string>
+    <string name="text_add_button">Add</string>
+    <string name="error_not_empty">cannot be empty</string>
+    <string name="error_common">error</string>
 </resources>
