--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="error_common">error</string>
     <string name="hint_date">Date</string>
     <string name="check_box_text">Select date</string>
+    <string name="skip">Skip</string>
+    <string name="onboarding_step1_text">Find projects from companies everywhere in the word</string>
+    <string name="onboarding_step2_text">Work hard and level up!</string>
+    <string name="onboarding_step3_text">Enjoy your progess!</string>
 </resources>
