--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,11 @@
     <string name="onboarding_step1_text">Find projects from companies everywhere in the word</string>
     <string name="onboarding_step2_text">Work hard and level up!</string>
     <string name="onboarding_step3_text">Enjoy your progess!</string>
+    <string name="profile">Profile</string>
+    <string name="name_surname">Name Surname</string>
+    <string name="delete_profile">Delete profile</string>
+    <string name="num_notes">[num] notes</string>
+    <string name="delete_all_notes">Delete all notes</string>
+    <string name="logout">Logout</string>
+    <string name="search">Search</string>
 </resources>
